adds player to the video fragment

--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="cardview_horizontal_text_margin">24dp</dimen>
+    <dimen name="horizontal_text_margin">24dp</dimen>
 </resources>
