--- a/app/src/main/res/layout-sw600dp-land/activity_details_recipe.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_details_recipe.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:baselineAligned="false"
+    android:background="@color/teal_100"
     tools:context="uk.me.desiderio.mimsbakes.RecipeDetailsActivity">
 
     <fragment
