--- a/app/src/main/res/layout/fragment_step_video.xml
+++ b/app/src/main/res/layout/fragment_step_video.xml
@@ -1,14 +1,66 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_100"
     tools:context="uk.me.desiderio.mimsbakes.StepVideoFragment">
 
-    <!-- TODO: Update blank fragment layout: insert video and finilize design -->
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/player_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/step_video_external_controls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/player_view"
+        app:layout_constraintEnd_toEndOf="@+id/player_view"
+        app:layout_constraintStart_toStartOf="@+id/player_view"
+        app:layout_constraintTop_toTopOf="@+id/player_view">
+
+        <ImageView
+            android:id="@+id/step_video_pause_image_view"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:src="@drawable/exo_controls_pause"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/step_video_replay_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/reload"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/step_video_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.ProgressBarCustomized"
+            android:visibility="gone" />
+    </FrameLayout>
+
     <TextView
         android:id="@+id/step_description_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Temp text" />
-</FrameLayout>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:paddingEnd="@dimen/horizontal_text_margin"
+        android:paddingStart="@dimen/horizontal_text_margin"
+        android:paddingTop="@dimen/step_video_fragment_vertical_text_margin"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_view" />
+
+</android.support.constraint.ConstraintLayout>
