--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#40C4FF</color>
 
     <color name="teal_800">#00695C</color>
+    <color name="teal_800_20">#3200695C</color>
     <color name="teal_50">#E0F2F1</color>
     <color name="teal_100">#B2DFDB</color>
     <color name="amber_a400">#FFC400</color>
