add shopping list feature where ingredients can be added to both individually or all the recipe ingredients. The user is prompted with message when ingredient is added. Ingredinet in the shopping list are highlighted

--- a/app/src/main/res/layout/step_list_ingredient_list_layout.xml
+++ b/app/src/main/res/layout/step_list_ingredient_list_layout.xml
@@ -19,7 +19,10 @@
         android:id="@+id/step_ingredients_recycler_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/external_list_margin"
+        android:layout_marginTop="@dimen/external_list_margin"
+        android:layout_marginBottom="@dimen/external_list_margin"
+        android:layout_marginEnd="@dimen/external_list_margin"
+        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/step_thumbnail_image_view"
         app:layout_constraintTop_toTopOf="parent" />
