--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="cardview_vertical_text_margin">24dp</dimen>
-    <dimen name="cardview_external_margin">8dp</dimen>
+    <!-- used at the cardview and widget-->
+    <dimen name="small_external_margin">8dp</dimen>
 
     <dimen name="two_pane_recipe_detail_list_width">300dp</dimen>
     <dimen name="external_list_margin">16dp</dimen>
@@ -20,5 +21,6 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_list_bottom_margin">16dp</dimen>
 
 </resources>
