--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_50"
+    android:background="@color/colorBackground"
     tools:context="uk.me.desiderio.mimsbakes.MainActivity">
 
     <android.support.v7.widget.RecyclerView
