--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
-    android:background="@color/teal_800_20"
+    android:background="@color/colorPlayerControlBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -14,7 +14,7 @@
         android:paddingLeft="@dimen/player_controls_horizontal_lateral_margin"
         android:paddingRight="@dimen/player_controls_horizontal_lateral_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="@color/teal_800" />
+        android:textColor="@color/white" />
 
     <com.google.android.exoplayer2.ui.DefaultTimeBar
         android:id="@id/exo_progress"
@@ -31,5 +31,5 @@
         android:paddingLeft="@dimen/player_controls_horizontal_lateral_margin"
         android:paddingRight="@dimen/player_controls_horizontal_lateral_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="@color/teal_800" />
+        android:textColor="@color/white" />
 </LinearLayout>
