--- a/app/src/main/res/layout/fragment_step_video.xml
+++ b/app/src/main/res/layout/fragment_step_video.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_100"
+    android:background="@color/colorBackground"
     tools:context="uk.me.desiderio.mimsbakes.StepVideoFragment">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
