--- a/app/src/main/res/layout/recipe_list_item_layout.xml
+++ b/app/src/main/res/layout/recipe_list_item_layout.xml
@@ -9,7 +9,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/amber_a400">
+        android:background="@color/colorPrimaryLight">
 
         <ImageView
             android:id="@+id/recipe_item_image_view"
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="@style/TealBody1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/recipe_item_name_text_view"
             app:layout_constraintTop_toBottomOf="@+id/recipe_item_name_text_view"
