--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,11 @@
     <dimen name="cardview_vertical_text_margin">24dp</dimen>
     <!-- used at the cardview and widget-->
     <dimen name="small_external_margin">8dp</dimen>
+    <dimen name="small_external_list_margin">4dp</dimen>
 
     <dimen name="two_pane_recipe_detail_list_width">300dp</dimen>
-    <dimen name="external_list_margin">16dp</dimen>
+    <dimen name="default_external_margin">16dp</dimen>
+    <dimen name="ingredient_icon_size">48dp</dimen>
 
     <dimen name="step_thumbnail_size">48dp</dimen>
     <dimen name="step_play_icon_size">32dp</dimen>
@@ -16,11 +18,14 @@
     <!--used in cardview and stepvideofragment text-->
     <dimen name="horizontal_text_margin">16dp</dimen>
 
-    <!--
-Refer to App Widget Documentation for margin information
-http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
-    -->
+    <!-- Refer to App Widget Documentation for margin information
+         http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="widget_list_bottom_margin">16dp</dimen>
+    <dimen name="widget_title_lateral_margin">4dp</dimen>
+    <dimen name="widget_list_lateral_margin">8dp</dimen>
+
+    <dimen name="widget_list_item_top_margin">8dp</dimen>
+    <dimen name="widget_list_item_bottom_margin">12dp</dimen>
 
 </resources>
