--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,14 +10,25 @@
 
 
     <style name="BrownHeadline" parent="TextAppearance.AppCompat.Headline">
-        <item name="android:textColor">@color/teal_800</item>
+        <item name="android:textColor">@color/colorFontDark</item>
     </style>
+
     <style name="TealSubhead" parent="TextAppearance.AppCompat.Subhead">
-        <item name="android:textColor">@color/teal_800</item>
+        <item name="android:textColor">@color/colorFontPrimary</item>
+    </style>
+
+    <style name="TealBody1" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/colorFontPrimary</item>
+
+    </style>
+
+    <style name="WidgetTitle" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textStyle">bold|italic</item>
     </style>
 
     <style name="AppTheme.ProgressBarCustomized" parent="@style/Theme.AppCompat">
-        <item name="colorAccent">#fff</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 
 </resources>
