--- a/app/src/main/res/xml/bakes_app_widget_info.xml
+++ b/app/src/main/res/xml/bakes_app_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/bakes_app_widget"
     android:initialLayout="@layout/bakes_app_widget"
-    android:minHeight="40dp"
-    android:minWidth="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:minHeight="180dp"
+    android:minWidth="120dp"
+    android:previewImage="@drawable/widget_preview"
+    android:resizeMode="vertical|horizontal"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
