--- a/app/src/main/res/layout/bakes_app_widget.xml
+++ b/app/src/main/res/layout/bakes_app_widget.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +13,7 @@
         android:layout_marginTop="30dp"
         android:paddingEnd="@dimen/widget_title_lateral_margin"
         android:paddingStart="@dimen/widget_title_lateral_margin"
-        android:text="Mim's Shopping List"
+        android:text="@string/widget_title"
         android:textAlignment="center"
         android:textAppearance="@style/WidgetTitle" />
 
@@ -44,7 +45,8 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/pink_circle"
                 android:padding="4dp"
-                android:src="@drawable/basket" />
+                android:src="@drawable/basket"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
