--- a/app/src/main/res/layout/widget_ingredient_list_item_layout.xml
+++ b/app/src/main/res/layout/widget_ingredient_list_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/horizontal_divider"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        tools:ignore="ContentDescription" />
 
 </FrameLayout>
