--- a/app/src/main/res/layout/step_list_item_layout.xml
+++ b/app/src/main/res/layout/step_list_item_layout.xml
@@ -31,8 +31,8 @@
         android:id="@+id/step_small_desc_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="@dimen/small_external_margin"
+        android:layout_marginStart="@dimen/default_external_margin"
         android:textAppearance="@style/TealSubhead"
         app:layout_constraintEnd_toStartOf="@+id/play_icon_image_view"
         app:layout_constraintStart_toEndOf="@+id/step_thumbnail_image_view"
