Adds new layout for tablet portrait in order to be able to restore video

--- a/app/src/main/res/layout/fragment_step_video.xml
+++ b/app/src/main/res/layout/fragment_step_video.xml
@@ -53,13 +53,13 @@
         android:id="@+id/step_description_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:paddingEnd="@dimen/horizontal_text_margin"
         android:paddingStart="@dimen/horizontal_text_margin"
         android:paddingTop="@dimen/step_video_fragment_vertical_text_margin"
-
+        android:paddingBottom="@dimen/step_video_fragment_vertical_text_margin"
+        android:textColor="#fff"
+        android:background="@color/colorAccentLight"
+        android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
