--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryLight">@color/amber_600</color>
     <color name="colorPrimaryBright">@color/amber_800</color>
     <color name="colorAccent">@color/pink_a400</color>
+    <color name="colorAccentLight">#FF8A80</color>
 
     <color name="colorFontPrimary">@color/teal_800</color>
     <color name="colorFontDark">@color/teal_900</color>
